fixed archive back link spacing [skip actions]

--- a/src/_includes/css/page.css
+++ b/src/_includes/css/page.css
@@ -3,7 +3,7 @@
 
   & p:first-child {
     margin-top: 0;
-    margin-bottom: .5em;
+    margin-bottom: var(--row-gap-medium);
   }
 }
 
